WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270040
[UnifiedPDF] Checked form controls flicker off while resizing the window
https://bugs.webkit.org/show_bug.cgi?id=270040
Summary
[UnifiedPDF] Checked form controls flicker off while resizing the window
Simon Fraser (smfr)
Reported
2024-02-24 10:49:47 PST
We need to regenerate page previews when form controls change.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-24 10:50:01 PST
<
rdar://problem/123566546
>
Simon Fraser (smfr)
Comment 2
2024-03-27 20:09:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26546
EWS
Comment 3
2024-03-28 09:39:39 PDT
Committed
276781@main
(4c27f79a1556): <
https://commits.webkit.org/276781@main
> Reviewed commits have been landed. Closing PR #26546 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug