[UnifiedPDF] Checked form controls flicker off while resizing the window https://bugs.webkit.org/show_bug.cgi?id=270040 rdar://123566546

Reviewed by Abrar Rahman Protyasha and Sammy Gill.

When PDF annotations change that affect painted annotations, we need to update
the page previews so that while tiles are missing during zooming/resize, the low
res snapshot has the correct state.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.h:
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/AsyncPDFRenderer.mm:
(WebKit::AsyncPDFRenderer::pdfContentChangedInRect):
(WebKit::AsyncPDFRenderer::updateTilesForPaintingRect): Deleted.
* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::setNeedsRepaintInDocumentRect):

Canonical link: https://commits.webkit.org/276781@main